--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "typescript": "^4.4.4"
     },
     "dependencies": {
-        "@florianluther/ftl-logger": "^1.0.5"
+        "@florianluther/ftl-logger": "^1.0.5",
+        "dotenv": "^10.0.0"
     }
 }
