--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "ftl-cosmos",
     "version": "1.0.0",
-    "description": "This package provides basic functionality to manipulate Cosmos DB.",
+    "description": "This package provides basic functionality to manage Cosmos DB.",
     "main": "index.js",
     "scripts": {
         "build": "tsc -b tsconfig.json",
